--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="GZbODzQCtBi8SLQf5jJ9UDrFZ0C-hmTDlHn6MixwKS8" />
   <meta name="google-site-verification" content="ix52_zwIBtevRpHn-1nl29NnvHggCWGT2MX0dRyytq8" />
+  <meta name="google-site-verification" content="rgM85rxkexx-T_Oqsh8QANetxzam8eVrLNnP9TiXiNI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="SEO Company Dallas - SEO Reimagined offers the best SEO services in Dallas, Texas with proven results and tailored strategies.">
   <title>SEO Company Dallas | SEO Reimagined</title>
